[package]
name = "windex"
version = "0.1.0"
authors = ["Brighton Sikarskie <bsikar@tuta.io>", "AbleTheAbove"]
edition = "2018"
description = "A simple rust window manager"
readme = "README.md"
repository = "https://github.com/bsikar/windex"
license = "MIT"

[dependencies]
x11 = { version = "2.19.1", features = ["xlib"] }
signal-hook = "0.3.10"
fork = "0.1.18"
libc = "0.2.103"

[features]
